--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+@layer components {
+  .spinner {
+    margin: 3.2rem auto 1.6rem;
+    width: 60px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 8px solid theme("colors.primary.900");
+    border-right-color: theme("colors.primary.200");
+    animation: rotate 1s infinite linear;
+  }
+
+  .spinner-mini {
+    margin: 0;
+    width: 20px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 2px solid theme("colors.primary.200");
+    border-right-color: transparent;
+    animation: rotate 1s infinite linear;
+  }
+
+  @keyframes rotate {
+    to {
+      transform: rotate(1turn);
+    }
+  }
+}
+
 /* globals.css */
 @keyframes gradient {
   0% {
@@ -19,10 +50,6 @@
   background: linear-gradient(45deg, #1e293b, #0f172a, #1e293b);
   background-size: 300% 300%;
   animation: gradient 5s ease infinite;
-}
-
-body {
-  scroll-behavior: smooth;
 }
 
 @keyframes float {
