--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,50 @@ html {
 .animate-float {
   animation: float 35s ease-in-out infinite; /* Adjusted duration for smoother effect */
 }
+
+/* Custom Toast Styles */
+.Toastify__toast {
+  background-color: #1e293b; /* primary.700 */
+  color: #e2e8f0; /* primary.100 */
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow */
+  font-family: "Inter", sans-serif; /* Custom font */
+  padding: 12px 16px; /* Padding */
+}
+
+.Toastify__toast--success {
+  background-color: #a855f7; /* accent.500 */
+  color: #ffffff; /* White text for better contrast */
+}
+
+.Toastify__toast--error {
+  background-color: #e53e3e; /* Red for error */
+  color: #ffffff; /* White text for better contrast */
+}
+
+.Toastify__toast--info {
+  background-color: #7e22ce; /* accent.700 */
+  color: #ffffff; /* White text for better contrast */
+}
+
+.Toastify__toast--warning {
+  background-color: #dd6b20; /* Orange for warning */
+  color: #ffffff; /* White text for better contrast */
+}
+
+.Toastify__progress-bar {
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.5
+  ); /* Semi-transparent white progress bar */
+}
+
+.Toastify__close-button {
+  color: #e2e8f0; /* primary.100 */
+}
+
+.Toastify__toast-icon {
+  margin-right: 8px; /* Space between icon and text */
+}
